--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,35 +1,72 @@
-body{
-    overflow-x: hidden;
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+body {
+  overflow-x: hidden;
 }
 
-.background{
-    position:relative;
-    /* left:10%; */
-    left:40%;
-    z-index: 1;
+.background {
+  position: relative;
+  /* left:10%; */
+  left: 40%;
+  z-index: 1;
 }
 
-.home1{
-    position: absolute;
-    top:0px;
-    z-index: 100;
-    width:100%;
+.home1 {
+  position: absolute;
+  top: 0px;
+  z-index: 100;
+  width: 100%;
 }
 
-.collapse{
-    margin-left: 55%;
+.collapse {
+  margin-left: 55%;
 }
 
-.nav-item{
-    margin-left:15px;
-    margin-right: 15px;
+.nav-item {  
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
-.welcome{
-    width:100%;
+.card {
+  color: #e12454;
+  border: none;
+}
+.card-body {
+  padding-top: 4rem;
+  padding-left: 3rem;
 }
 
-.amico{
-    margin-left:20%;
-    width:0%;
+.card-title {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 4.3rem;
+}
+.card-text {
+  max-width: 30rem;
+  margin-top: 3rem;
+  font-family: "Roboto";
+  color: #e12454;
+  font-size: 1.3rem;
+}
+.card .button {
+    font-size: 1.3rem;
+    color: white;
+    font-family: 'Roboto',sans-serif;
+    padding: 10px 30px 10px 30px;
+    margin-top: 3rem;
+    margin-left: 0.7rem;
+  background: linear-gradient(
+    270deg,
+    #76127e 0%,
+    rgba(231, 15, 119, 0.83) 24.48%,
+    #f28433 60.42%,
+    rgba(217, 33, 22, 0.83) 100%
+  );
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
+}
+
+.amico {
+  margin-left: 25%;
+  width: 0%;
 }
